// Table Now Database Schema (DBML)
// 기준: ERD_02 + 소셜 로그인 + 비밀번호 변경 인증 + FCM 토큰
// 작성일: 2026-01-16
// 작성자: 김택권

Project table_now_db {
  database_type: 'MySQL'
  Note: 'Table Now 애플리케이션 데이터베이스 스키마'
}

// ============================================================
// 1. customer (고객)
// ============================================================
// 구분: 엔티티(Entity)
// 설명: 고객 계정 정보를 관리한다. 소셜 로그인(구글) 및 일반 로그인을 지원한다.
Table customer {
  customer_seq int [pk, increment, note: '고객 번호']
  customer_name varchar(255) [not null, note: '고객 이름']
  customer_phone varchar(255) [note: '고객 전화번호 (소셜 로그인 시 NULL 가능)']
  customer_email varchar(255) [not null, note: '고객 이메일']
  customer_pw varchar(255) [note: '비밀번호 (소셜 로그인 시 NULL)']
  provider varchar(255) [not null, default: 'local', note: '로그인 제공자 (local/google)']
  provider_subject varchar(255) [note: '소셜 로그인 제공자의 사용자 ID (구글 ID 등)']
  created_at datetime [not null, note: '가입 일자']
  
  Indexes {
    provider_subject [name: 'idx_provider_subject']
    (provider, provider_subject) [name: 'idx_provider_subject_combo']
  }
  
  Note: '''
    - provider: 'local' (일반 회원가입) 또는 'google' (구글 로그인)
    - provider_subject: 구글 로그인 사용자의 경우 구글 ID 저장
    - customer_pw: 구글 로그인 사용자는 NULL, 일반 회원가입 사용자는 비밀번호 저장
    - customer_phone: 구글 로그인 사용자는 NULL 가능
  '''
}

// ============================================================
// 2. store (식당)
// ============================================================
// 구분: 엔티티(Entity)
// 설명: 식당(매장) 기본 정보
Table store {
  store_seq int [pk, increment, note: '식당 번호']
  store_address varchar(255) [not null, note: '주소']
  store_lat double [not null, note: '위도']
  store_lng double [not null, note: '경도']
  store_phone varchar(255) [not null, note: '전화번호']
  store_opentime varchar(255) [note: '운영 시작시간 (정보용)']
  store_closetime varchar(255) [note: '운영 종료시간 (정보용)']
  store_description varchar(255) [note: '식당 설명']
  store_image varchar(255) [note: '이미지 URL']
  store_placement varchar(255) [not null, note: '테이블 배치 정보']
  created_at datetime [not null, note: '생성 일자']
}

// ============================================================
// 3. store_table (테이블)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 식당에 소속된 테이블 정보
Table store_table {
  store_table_seq int [pk, increment, note: '테이블 번호']
  store_seq int [not null, ref: > store.store_seq, note: '식당 번호']
  store_table_name int [not null, note: '테이블 이름(라벨)']
  store_table_capacity int [not null, note: '수용 인원']
  store_table_inuse boolean [not null, note: '사용 중 여부']
  created_at datetime [not null, note: '생성 일자']
  
  Indexes {
    store_seq [name: 'idx_store_table_store_seq']
  }
}

// ============================================================
// 4. password_reset_auth (비밀번호 변경 인증)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 비밀번호 변경 시 이메일 인증 코드를 관리한다. customer와의 관계를 가진다.
Table password_reset_auth {
  auth_seq int [pk, increment, note: '인증 번호']
  customer_seq int [not null, ref: > customer.customer_seq, note: '고객 번호']
  auth_token varchar(255) [not null, note: '인증 토큰 (UUID 또는 랜덤 문자열)']
  auth_code varchar(6) [note: '인증 코드 (6자리 숫자, 선택사항)']
  expires_at datetime [not null, note: '만료 일시 (생성 후 10분)']
  is_verified boolean [not null, default: false, note: '인증 완료 여부']
  created_at datetime [not null, note: '생성 일시']
  
  Indexes {
    customer_seq [name: 'idx_customer_seq']
    auth_token [name: 'idx_auth_token']
    expires_at [name: 'idx_expires_at']
  }
  
  Note: '''
    - 비밀번호 변경 요청 시 생성되며, 이메일로 인증 코드가 발송됨
    - 인증 코드는 10분간 유효함
    - 인증 완료 후 비밀번호 변경에 사용되며, 사용 후 삭제됨 (일회용)
    - auth_token과 auth_code를 조합하여 인증 진행
    - ON DELETE CASCADE: 사용자 삭제 시 관련 인증 정보도 자동 삭제
  '''
}

// ============================================================
// 5. device_token (FCM 기기 토큰)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 사용자 기기의 FCM 토큰을 관리한다. 한 사용자가 여러 기기를 사용할 수 있도록 설계되었다.
Table device_token {
  device_token_seq int [pk, increment, note: '기기 토큰 번호']
  customer_seq int [not null, ref: > customer.customer_seq, note: '고객 번호']
  fcm_token varchar(255) [not null, note: 'FCM 토큰']
  device_type varchar(10) [not null, note: '기기 타입 (ios/android)']
  device_id varchar(255) [note: '기기 고유 식별자 (Android: androidId, iOS: identifierForVendor)']
  created_at datetime [default: `CURRENT_TIMESTAMP`, note: '생성 일시']
  updated_at datetime [default: `CURRENT_TIMESTAMP`, note: '수정 일시']
  
  Indexes {
    fcm_token [name: 'idx_fcm_token']
    device_id [name: 'idx_device_id']
    (customer_seq, fcm_token) [unique, name: 'uk_customer_token']
  }
  
  Note: '''
    - 한 사용자가 여러 기기를 사용할 수 있으므로 (customer_seq, fcm_token) 복합 UNIQUE 키 사용
    - ON DELETE CASCADE: 사용자 삭제 시 관련 토큰도 자동 삭제
    - fcm_token에 인덱스 설정 (토큰으로 빠른 조회 가능)
    - device_id에 인덱스 설정 (동일 기기 확인용)
    - FCM 토큰은 기기별로 고유하며, 앱 재설치 시 변경될 수 있음
    - device_id: 동일 기기에서 여러 사용자가 로그인할 수 있으므로 UNIQUE 키는 설정하지 않음
    - Android: Settings.Secure.ANDROID_ID 사용
    - iOS: identifierForVendor (IDFV) 사용
  '''
}

// ============================================================
// 6. weather (날씨)
// ============================================================
// 구분: 연관 엔티티(Associative Entity)
// 설명: 식당별 특정 시점의 날씨 정보. store와 날씨 정보를 연결하며, 독립적인 속성을 보유. reserve(릴레이션쉽)가 직접 참조함
Table weather {
  store_seq int [pk, ref: > store.store_seq, note: '식당 번호']
  weather_datetime datetime [pk, note: '날씨 기준 일시']
  weather_type varchar(255) [not null, note: '날씨 상태']
  weather_low double [not null, note: '최저 기온']
  weather_high double [not null, note: '최고 기온']
  
  Indexes {
    store_seq [name: 'idx_weather_store_seq']
  }
  
  Note: '''
    - PK는 (store_seq, weather_datetime) 복합키
    - 각 식당별로 날씨 정보를 저장 (store : weather = 1:N)
    - OpenWeatherMap API 호출 시 해당 식당의 store_lat, store_lng를 사용하여 날씨 정보 저장
    - 독립적인 속성(weather_type, weather_low, weather_high)을 보유한 연관 엔티티
    - 연관 엔티티로 분류하는 이유: N:M 관계를 해소하는 것이 아니라, 독립적인 속성을 가진 관계를 표현하며, 다른 릴레이션쉽(reserve)이 직접 참조하는 구조이기 때문
  '''
}

// ============================================================
// 7. reserve (예약)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 예약 기본 정보 및 결제 상태
Table reserve {
  reserve_seq int [pk, increment, note: '예약 번호']
  store_seq int [not null, ref: > store.store_seq, note: '식당 번호']
  customer_seq int [not null, ref: > customer.customer_seq, note: '고객 번호']
  weather_datetime datetime [not null, note: '날씨 기준 일시']
  reserve_tables varchar(255) [not null, note: '테이블 번호 목록 (comma-separated)']
  reserve_capacity int [not null, note: '예약 인원']
  reserve_date datetime [not null, note: '예약 일시']
  created_at datetime [not null, note: '생성 일자']
  payment_key varchar(255) [note: 'Toss Payment Key']
  payment_status varchar(255) [note: '결제 상태']
  
  Indexes {
    store_seq [name: 'idx_reserve_store_seq']
    customer_seq [name: 'idx_reserve_customer_seq']
    weather_datetime [name: 'idx_reserve_weather_datetime']
  }
  
  Note: '''
    - weather_datetime: weather 테이블의 복합키 (store_seq, weather_datetime)를 참조하는 FK의 일부
    - reserve 테이블의 FK는 (store_seq, weather_datetime) 복합키로 weather 테이블의 복합키를 참조
    - reserve.store_seq와 weather.store_seq가 자동으로 일치해야 함 (FK 제약조건)
  '''
}

// reserve와 weather의 복합키 관계
// Note: reserve 테이블의 (store_seq, weather_datetime)가 weather 테이블의 복합키 (store_seq, weather_datetime)를 참조
// DBML에서는 복합키 관계를 명시적으로 표현하기 어려우므로, 각 컬럼별로 관계를 표현
Ref: reserve.store_seq > weather.store_seq
Ref: reserve.weather_datetime > weather.weather_datetime

// ============================================================
// 8. menu (메뉴)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 식당에 속한 메뉴 마스터 (store : menu = 1:N)
Table menu {
  menu_seq int [pk, increment, note: '메뉴 번호']
  store_seq int [not null, ref: > store.store_seq, note: '식당 번호']
  menu_name varchar(255) [not null, note: '메뉴 이름']
  menu_price int [not null, note: '메뉴 가격']
  menu_description varchar(255) [not null, note: '메뉴 설명']
  menu_image varchar(255) [not null, note: '메뉴 이미지 URL']
  menu_cost int [not null, note: '메뉴 원가']
  created_at datetime [not null, note: '생성 일자']
  
  Indexes {
    store_seq [name: 'idx_menu_store_seq']
  }
}

// ============================================================
// 9. option (추가 메뉴)
// ============================================================
// 구분: 릴레이션쉽(Relationship)
// 설명: 메뉴에 종속된 추가 메뉴(옵션)
Table option {
  option_seq int [pk, increment, note: '추가 메뉴 번호']
  store_seq int [not null, ref: > store.store_seq, note: '식당 번호']
  menu_seq int [not null, ref: > menu.menu_seq, note: '메뉴 번호']
  option_name varchar(255) [not null, note: '추가 메뉴 이름']
  option_price int [not null, note: '추가 메뉴 가격']
  option_cost int [not null, note: '추가 메뉴 원가']
  created_at datetime [not null, note: '생성 일자']
  
  Indexes {
    store_seq [name: 'idx_option_store_seq']
    menu_seq [name: 'idx_option_menu_seq']
  }
}

// ============================================================
// 10. pay (결제)
// ============================================================
// 구분: 연관 엔티티(Associative Entity)
// 설명: 예약 단위의 실제 결제 내역
Table pay {
  pay_id int [pk, increment, note: '결제 번호']
  reserve_seq int [not null, ref: > reserve.reserve_seq, note: '예약 번호']
  store_seq int [not null, ref: > store.store_seq, note: '식당 번호']
  menu_seq int [not null, ref: > menu.menu_seq, note: '메뉴 번호']
  option_seq int [ref: > option.option_seq, note: '추가 메뉴 번호']
  pay_quantity int [not null, note: '수량']
  pay_amount int [not null, note: '결제 금액']
  created_at datetime [not null, note: '생성 일자']
  
  Indexes {
    reserve_seq [name: 'idx_pay_reserve_seq']
    store_seq [name: 'idx_pay_store_seq']
    menu_seq [name: 'idx_pay_menu_seq']
    option_seq [name: 'idx_pay_option_seq']
  }
}
